# project

./: .gitignore  LICENSE  config.yaml  dataset_debug.py  ddp_trainer.py  pyproject.toml  runner.py  runner_ddp.py  runner_distributed.py  test_model_final.py  trainer.py  vis_input.ply
dataset/: HoLaDateset.py  dataset.py  transform.py
extensions/chamfer_dist/: setup.py
extensions/cubic_feature_sampling/: setup.py
extensions/gridding/: setup.py
extensions/pointnet2_ops_lib/: check_cuda_arch_list.py  setup.py
inference/: HoLaEncode.py  Inferer.py  inference.py
model/: AdaPoinTr.py  AdaPoinTrPCTransformer.py  Attention.py  DGCNN.py  GADecoder.py  GAEncoder.py  Model.py  PCTransformer.py  PoinTr.py  PoinTrPCTransformer.py  QueryGenerator.py  TransformerBlocks.py  Utils.py  __init__.py  attention.py  chamfer_distance.py  encoder.py  geometry.py  model_utils.py  transformer_blocks.py  utils.py
model/AdaPoinTr/: AdaPoinTr.py  AdaPoinTrPCTransformer.py  Attention.py  DGCNN.py  GADecoder.py  GAEncoder.py  PoinTr.py  PoinTrPCTransformer.py  QueryGenerator.py  TransformerBlocks.py  Utils.py  __init__.py
model/HoLa/: HoLaAutoEncoder.py  HoLaDiffusor.py
scripts/data_process/: convert_ply2_xyz.sh  create_partial_evaluation.sh  generate_latents.sh  process_abc.sh  process_deepcad.sh
tools/: ABCReader.py  PointCloudSampler.py  README.md  SolidWrapper.py  create_partial_evaluation.sh  create_partial_point_cloud.py  note.md  ply2xyz.py  process_abc.py  process_abc.sh  process_data.sh
tools/data/: ABCReader.py  __init__.py  (+8 more)
trainer/: AdaTrainer.py  DDPTrainer.py  __init__.py
utils/: metrics.py  misc.py
visualize/: gt_0.ply
(+24 files in other folders)
