[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapointr"
version = "0.1.0"
description = "Postgraduate Project"
authors = [
    {name = "Yu Xingyao", email = "yuxingyao50@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Computer Graphics",
]

dependencies = [
    "torch>=1.4.0",
    "torchvision>=0.5.0",
    "numpy>=1.19.0",
    "trimesh>=3.9.0",
    "omegaconf>=2.0.0",
    "tqdm>=4.60.0",
    "ray>=1.0.0",
    "open3d>=0.13.0",
    "hydra-core>=1.0.0",
    "tensorboard>=2.0.0",
    "h5py>=3.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YuXingyao000"
Repository = "https://github.com/YuXingyao000/project"
"Bug Tracker" = "https://github.com/YuXingyao000/project/issues"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
